tests/spec/emit/snapshots/interop_result_map_field_assignment.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  struct Holder { f: fn(string) -> Result<int, error> }
  
  fn main() {
    let mut m = Map.new<string, Holder>()
    m["a"] = Holder { f: strconv.Atoi }
    let Some(found) = m.get("a") else { return; };
    let mut entry = found
    entry.f = strconv.Atoi
    m["a"] = entry
    let Some(h) = m.get("a") else { return; };
    let r = h.f("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

type Holder struct {
	f func(string) (int, error)
}

func main() {
	m := make(map[string]Holder)
	m["a"] = Holder{f: strconv.Atoi}
	found, ok := m["a"]
	if !ok {
		return
	}
	entry := found
	entry.f = strconv.Atoi
	m["a"] = entry
	h, ok_1 := m["a"]
	if !ok_1 {
		return
	}
	r, err := h.f("1")
	if err == nil {
		_ = r
	}
}
