tests/spec/emit/snapshots/interop_result_native_method_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let xs: Slice<string> = ["1"]
    let ys = xs.map(strconv.Atoi)
    match ys[0] {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	xs := []string{"1"}
	ys := lisette.SliceMap(xs, func(arg0 string) lisette.Result[int, error] {
		return lisette.ResultFromPair[int](strconv.Atoi(arg0))
	})
	subject := ys[0]
	if subject.Tag == lisette.ResultOk {
		_ = subject.OkVal
	}
}
