tests/spec/emit/snapshots/interop_result_propagate_in_try_block_discard_and_nil_guard.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  import "go:os"
  
  fn open_and_check(path: string, n: string) -> Result<int, error> {
    try {
      let f = os.Open(path)?
      let _ = f.Stat()?
      strconv.Atoi(n)?
    }
  }
  
  fn main() {
    match open_and_check("/tmp/x", "7") {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import (
	"errors"
	lisette "github.com/ivov/lisette/prelude"
	"os"
	"strconv"
)

func openAndCheck(path, n string) (int, error) {
	f, err := os.Open(path)
	if err != nil {
		return 0, err
	}
	if f == nil {
		return 0, errors.New("unexpected nil")
	}
	ret, err_1 := f.Stat()
	if err_1 != nil {
		return 0, err_1
	}
	if lisette.IsNilInterface(ret) {
		return 0, errors.New("unexpected nil")
	}
	ret_1, err_2 := strconv.Atoi(n)
	if err_2 != nil {
		return 0, err_2
	}
	return ret_1, nil
}

func main() {
	if v, err := openAndCheck("/tmp/x", "7"); err == nil {
		_ = v
	}
}
