tests/spec/emit/snapshots/interop_result_return_pos.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn make_parser() -> fn(string) -> Result<int, error> {
    strconv.Atoi
  }
  
  fn main() {
    let f = make_parser()
    let r = f("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func makeParser() func(string) (int, error) {
	return strconv.Atoi
}

func main() {
	f := makeParser()
	r, err := f("42")
	if err == nil {
		_ = r
	}
}
