tests/spec/emit/snapshots/interop_result_select_send.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let ch = Channel.new<fn(string) -> Result<int, error>>()
    select {
      ch.send(strconv.Atoi) => { let _ = 0 },
      _ => { let _ = 1 },
    }
  }
---
package main

import "strconv"

func main() {
	ch := make(chan func(string) (int, error))
	select {
	case ch <- strconv.Atoi:
	default:
	}
}
