tests/spec/emit/snapshots/interop_result_slice_append.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  type F = fn(string) -> Result<int, error>
  
  fn main() {
    let mut xs: Slice<F> = []
    xs = xs.append(strconv.Atoi)
    let _ = xs
  }
---
package main

import "strconv"

type F func(string) (int, error)

func main() {
	xs := ([]F)(nil)
	xs = append(xs, strconv.Atoi)
	_ = xs
}
