tests/spec/emit/snapshots/interop_result_slice_element.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let arr: Slice<fn(string) -> Result<int, error>> = [strconv.Atoi]
    let r = arr[0]("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	arr := []func(string) (int, error){strconv.Atoi}
	r, err := arr[0]("1")
	if err == nil {
		_ = r
	}
}
