tests/spec/emit/snapshots/interop_result_slice_option_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn main() {
    match aws.Make() {
      Ok(xs) => {
        for x in xs {
          match x {
            Some(v) => fmt.Println(v),
            None => fmt.Println("none"),
          }
        }
      },
      Err(e) => { let _ = e },
    }
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ret, ret_1 := aws.Make()
	var result lisette.Result[[]lisette.Option[string], error]
	if ret_1 != nil {
		result = lisette.MakeResultErr[[]lisette.Option[string], error](ret_1)
	} else {
		wrapped := make([]lisette.Option[string], len(ret))
		for i, v := range ret {
			if v != nil {
				wrapped[i] = lisette.MakeOptionSome[string](*v)
			} else {
				wrapped[i] = lisette.MakeOptionNone[string]()
			}
		}
		result = lisette.MakeResultOk[[]lisette.Option[string], error](wrapped)
	}
	if result.Tag == lisette.ResultOk {
		for _, x := range result.OkVal {
			if x.Tag == lisette.OptionSome {
				fmt.Println(x.SomeVal)
			} else {
				fmt.Println("none")
			}
		}
	} else {
		_ = result.ErrVal
	}
}
