tests/spec/emit/snapshots/interop_result_struct_field.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  struct Parser { parse: fn(string) -> Result<int, error> }
  
  fn main() {
    let p = Parser { parse: strconv.Atoi }
    let r = p.parse("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

type Parser struct {
	parse func(string) (int, error)
}

func main() {
	p := Parser{parse: strconv.Atoi}
	r, err := p.parse("42")
	if err == nil {
		_ = r
	}
}
