tests/spec/emit/snapshots/interop_result_task_block.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let f = strconv.Atoi
    task {
      let r = f("42")
      let _ = r
    }
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	f := strconv.Atoi
	go func() {
		r := lisette.ResultFromPair[int](f("42"))
		_ = r
	}()
}
